[gd_scene load_steps=2 format=2]

[ext_resource path="res://player/ControllableCamera.gd" type="Script" id=1]

[node name="ControllableCamera" type="Spatial"]
script = ExtResource( 1 )

[node name="GimbalH" type="Spatial" parent="."]

[node name="GimbalV" type="Spatial" parent="GimbalH"]

[node name="ClippedCamera" type="ClippedCamera" parent="GimbalH/GimbalV"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )
current = true
near = 0.01
far = 1000.0
